// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Footer
  communityId="wipro2"
  isAuthorized={true}
  loginUrl="https://accounts.topcoder-dev.com/member"
  menuItems={
    Array [
      Object {
        "title": "Home",
        "url": "home",
      },
      Object {
        "title": "Learn",
        "url": "learn",
      },
      Object {
        "title": "Challenges",
        "url": "challenges",
      },
      Object {
        "title": "Leaderboard",
        "url": "leaderboard",
      },
    ]
  }
  registerUrl="https://accounts.topcoder-dev.com/member/registration"
  theme={
    Object {
      "authorize": "src-shared-components-tc-communities-Footer-___style__authorize___2n0us",
      "btnLogin": "src-shared-components-tc-communities-Footer-___style__btnLogin___2wlJH",
      "btnRegister": "src-shared-components-tc-communities-Footer-___style__btnRegister___3mKpB",
      "item": "src-shared-components-tc-communities-Footer-___style__item___1x2QI",
      "itemLogo": "src-shared-components-tc-communities-Footer-___style__itemLogo___1d4UC",
      "link": "src-shared-components-tc-communities-Footer-___style__link___10Tbo",
      "logo": "src-shared-components-tc-communities-Footer-___style__logo___Avikn",
      "menu": "src-shared-components-tc-communities-Footer-___style__menu___1i116",
    }
  }
/>
`;

exports[`Snapshot match 2`] = `
<Footer
  communityId="wipro2"
  isAuthorized={true}
  loginUrl="https://accounts.topcoder-dev.com/member"
  menuItems={
    Array [
      Object {
        "title": "Home",
        "url": "home",
      },
      Object {
        "title": "Learn",
        "url": "learn",
      },
      Object {
        "title": "Challenges",
        "url": "challenges",
      },
      Object {
        "title": "Leaderboard",
        "url": "leaderboard",
      },
    ]
  }
  registerUrl="https://accounts.topcoder-dev.com/member/registration"
  theme={
    Object {
      "authorize": "src-shared-components-tc-communities-Footer-___style__authorize___2n0us authorize",
      "btnLogin": "src-shared-components-tc-communities-Footer-___style__btnLogin___2wlJH btnLogin",
      "btnRegister": "src-shared-components-tc-communities-Footer-___style__btnRegister___3mKpB btnRegister",
      "container": "container",
      "item": "src-shared-components-tc-communities-Footer-___style__item___1x2QI",
      "itemLogo": "src-shared-components-tc-communities-Footer-___style__itemLogo___1d4UC",
      "link": "src-shared-components-tc-communities-Footer-___style__link___10Tbo",
      "logo": "src-shared-components-tc-communities-Footer-___style__logo___Avikn",
      "menu": "src-shared-components-tc-communities-Footer-___style__menu___1i116 menu",
    }
  }
/>
`;
